Created page for staff to view feedback

--- a/Views/Dashboard/StaffDashboard.cshtml
+++ b/Views/Dashboard/StaffDashboard.cshtml
@@ -82,25 +82,24 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var assignment in Model.AssignedQueries)
+                        @{
+                            var assignedQueries = Model.AssignedQueries.OrderByDescending(a => a.Query?.SubmissionDate).Take(10);
+                        }
+                        @foreach (var assignment in assignedQueries)
                         {
                             var query = assignment.Query;
-
-                            <tr class="query-row" onclick="window.location.href='@Url.Action("QueryDetails", "StaffQuery", new { queryId = query.QueryID})'">
-                                <td>@query.Student?.User?.Email</td>
-                                <td>@query.Category?.QueryType?.TypeName</td>
-                                <td>@query.Department?.DepartmentName</td>
+                            <tr class="query-row" onclick="window.location.href='@Url.Action("QueryDetails", "StaffQuery", new { queryId = query?.QueryID})'">
+                                <td>@query?.Student?.User?.Email</td>
+                                <td>@query?.Category?.QueryType?.TypeName</td>
+                                <td>@query?.Department?.DepartmentName</td>
                                 <td>
-                                    <span class="status-badge @(query.Status == QueryModel.QueryStatus.Ongoing))">
-                                        @query.Status
+                                    <span class="status-badge @(query?.Status == QueryModel.QueryStatus.Ongoing)">
+                                        @query?.Status
                                     </span>
                                 </td>
-                                <td>@query.SubmissionDate?.ToString("dd MMM yyyy")</td>
+                                <td>@query?.SubmissionDate?.ToString("dd MMM yyyy")</td>
                                 <td>
-                                    <a href="@Url.Action("QueryDetails", "StaffQuery", new { queryId = query.QueryID })" class="btn-view">View</a>
-
-                                
-                                 
+                                    <a href="@Url.Action("QueryDetails", "StaffQuery", new { queryId = query?.QueryID })" class="btn-view">View</a>
                                 </td>
                             </tr>
                         }
