--- a/Views/Query/StudentQuery/QueryOverview/ViewResolvedTicket.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/ViewResolvedTicket.cshtml
@@ -168,6 +168,7 @@
                 <p>Your input helps us improve our service.</p>
             </div>
         </div>
+    </div>
 
     <script>
             document.addEventListener('DOMContentLoaded', function () {
