--- a/Views/Query/StudentQuery/TicketDashboard.cshtml
+++ b/Views/Query/StudentQuery/TicketDashboard.cshtml
@@ -90,18 +90,20 @@
                 </a>
             </div>
             <div class="option-card">
-                <a asp-controller="Query" asp-action="ResolvedTickets" class="option-link">
+                <a asp-controller="Query" asp-action="ViewResolvedQueries" class="option-link">
                     <div class="card-icon">
                         <i class="fas fa-check-circle"></i>
                     </div>
                     <div class="card-title">
-                        View Resolved Tickets
+                        View Resolved Tickets and give feedback
                     </div>
                     <div class="card-description">
                         Access history of completed tickets
                     </div>
                 </a>
             </div>
+
+            <!--         
             <div class="option-card">
                 <a asp-controller="Query" asp-action="ViewResolvedTicket" class="option-link">
                     <div class="card-icon">
@@ -115,6 +117,9 @@
                     </div>
                 </a>
             </div>
+             -->
+
+
         </div>
     </div>
 
