--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                 @if (User.IsInRole("Staff"))
                 {
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="StaffQuery" asp-action="StaffQueries">
+                            <a class="nav-link text-dark" asp-controller="StaffQuery" asp-action="TicketDashboard">
                             <img src="~/svgs/ticket.svg" alt="Queries Icon" class="icon" /><span>Staff Queries</span>
                         </a>
                     </li>
